--- a/playbooks/azure_cluster/azure_aks.yaml
+++ b/playbooks/azure_cluster/azure_aks.yaml
@@ -6,7 +6,18 @@
     shell: az group create -l {{AKS_location}} -n {{AKS_resource_group}}
 
   - name: Create an AKS cluster
-    shell: az aks create --resource-group {{AKS_resource_group}} --name {{aks_name}} --kubernetes-version {{k8s_version}} --location {{AKS_location}} --node-vm-size Standard_D2_v3 --node-count {{node_count}} --generate-ssh-keys
+    shell: az aks create --resource-group {{AKS_resource_group}} --name {{aks_name}} --kubernetes-version {{k8s_version}} --location {{AKS_location}} --node-vm-size Standard_B2s --node-count {{node_count}} --generate-ssh-keys --enable-cluster-autoscaler --min-count 1 --max-count 10
+    async: 2100
+    poll: 0
+    register: aks_create
+  
+  - name: Check if cluster creation is complete
+    async_status:
+      jid: "{{ aks_create.ansible_job_id }}"
+    register: job_result
+    until: job_result.finished
+    delay: 60
+    retries: 30
 
   - name: Setting kubeconfig for the cluster
     shell: az aks get-credentials --resource-group {{ AKS_resource_group }} --name {{ aks_name }}
