--- a/server/playbooks/azure_aks.yml
+++ b/server/playbooks/azure_aks.yml
@@ -48,5 +48,40 @@
   - name: creating the spec.yaml file
     template:
         src: spec_tpl.j2
-        dest: '{{networkHome}}/spec.yaml'
-  
+        dest: '{{home_dir}}/spec.yaml'
+  - name: copying the kubeconfig file to {{home_dir}}/vars/kubeconfig
+    copy:
+      src: /home/ubuntu/.kube/config
+      dest: '{{home_dir}}/vars/kubeconfig'
+  - name: Creating the blockchain network for {{aks_name}}
+    shell:
+      cmd: dyce up -e true -o service.payment.net 
+      chdir: '{{home_dir}}'
+    async: 2100
+    poll: 0
+    register: network_create
+
+  - name: Check if network creation is complete
+    async_status:
+      jid: "{{ network_create.ansible_job_id }}"
+    register: network_result
+    until: network_result.finished
+    delay: 60
+    retries: 30
+
+  - name: Exposing the Explorer for {{aks_name}}
+    shell:
+      cmd: dyce explorerup 
+      chdir: '{{home_dir}}'
+    async: 2100
+    poll: 0
+    register: explorer_create
+
+  - name: Check if explorer is up
+    async_status:
+      jid: "{{ explorer_create.ansible_job_id }}"
+    register: explorer_result
+    until: explorer_result.finished
+    delay: 60
+    retries: 30
+    
