fixed status of network update

--- a/server/playbooks/dummy.yml
+++ b/server/playbooks/dummy.yml
@@ -9,7 +9,6 @@
     register: result
   - debug: 
            var: result.stdout
-  - name: copying file 
-    copy:
-      src: /home/ubuntu/.kube/config
-      dest: '{{home_dir}}/vars/kubeconfig'
+  - name: pulling a ping 
+    shell: ping a
+      
