--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "helmet": "^4.6.0",
     "http-errors": "^1.6.3",
     "joi": "^17.4.2",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.13",
